--- a/src/exercise/01.html
+++ b/src/exercise/01.html
@@ -6,7 +6,19 @@
 <!--   📜 https://developer.mozilla.org/en-US/docs/Web/HTML/Element/script#attributes -->
 <!--   📜 https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Modules -->
 <!--   📜 https://github.com/mdn/js-examples/tree/master/module-examples -->
+<body>
+  <script>
+    const root = document.createElement('div')
+    root.id = 'root'
+    document.body.appendChild(root)
 
+    const div = document.createElement('div')
+    div.textContent = 'Hello World'
+    div.className = 'container'
+
+    root.appendChild(div)
+  </script>
+</body>
 <!-- These next instructions are to be written in JavaScript in the <script> tag -->
 <!-- 🐨 Create a div -->
 <!--   💰 document.createElement('div') -->
