--- a/src/exercise/01.html
+++ b/src/exercise/01.html
@@ -10,13 +10,13 @@
   <script>
     const root = document.createElement('div')
     root.id = 'root'
-    document.body.appendChild(root)
+    document.body.append(root)
 
     const div = document.createElement('div')
     div.textContent = 'Hello World'
     div.className = 'container'
 
-    root.appendChild(div)
+    root.append(div)
   </script>
 </body>
 <!-- These next instructions are to be written in JavaScript in the <script> tag -->
