--- a/src/exercise/01.html
+++ b/src/exercise/01.html
@@ -7,16 +7,16 @@
 <!--   📜 https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Modules -->
 <!--   📜 https://github.com/mdn/js-examples/tree/master/module-examples -->
 <body>
-  <script>
+  <script> // add type='module' here
     const root = document.createElement('div')
-    root.id = 'root'
-    document.body.append(root)
+    root.id = 'root' //can use root.setAttribute here. It tends to be use for custom attributes
+    document.body.appendChild(root) //works, but better to use .append. appendChild returns a node and also can only accept one node
 
     const div = document.createElement('div')
     div.textContent = 'Hello World'
     div.className = 'container'
 
-    root.append(div)
+    root.appendChild(div)
   </script>
 </body>
 <!-- These next instructions are to be written in JavaScript in the <script> tag -->
