--- a/src/exercise/02.html
+++ b/src/exercise/02.html
@@ -3,27 +3,16 @@
 
 <body>
   <div id="root"></div>
-
-  <!-- 🐨 add React and ReactDOM on the page.
-       💰 Here are script tags that'll do the job:
   <script src="https://unpkg.com/react@18.1.0/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@18.1.0/umd/react-dom.development.js"></script>
-  -->
+<!-- react for creating elements (e.g. createElement), reactDOM for rendering elements (e.g. append)-->
 
   <script type="module">
     const rootElement = document.getElementById('root')
-
-    // You're going to re-implement this code using React!
-    // 💣 So go ahead and delete this implementation (or comment it out for now)
-    // These three lines are similar to React.createElement
-    const element = document.createElement('div')
-    element.textContent = 'Hello World' // 💰 in React, you set this with the "children" prop
-    element.className = 'container' // 💰 in React, this is also called the "className" prop
-    // This is similar to ReactDOM.createRoot().render()
-    rootElement.append(element)
-
-    // 🐨 Please re-implement the regular document.createElement code above
-    // with these React API calls
-    // 💰 The example in the markdown file should be a good hint for you.
+    const reactElement = React.createElement('div', {className: 'container', children: 'Hello World'})
+    ReactDOM.createRoot(rootElement).render(reactElement)
+    // can use ReactDOM.render(reactElement, rootElement), although createRoot allows the root node to be stored and reused, so you don't have to repeatedly specify the container to render in
+    //current code is kinda pointless bc it is not using the full benefits of create root. Better to store the root as a variable, and use .render after
+    // although rootElement already exists, react does not know that this is the node to append everything . Create root lets it know
   </script>
 </body>
