--- a/src/exercise/03.html
+++ b/src/exercise/03.html
@@ -8,11 +8,11 @@
   <script src="https://unpkg.com/@babel/standalone@7.12.4/babel.js"></script>
 
   <script type="text/babel">
-    const className = 'container'
     const children = 'Hello World'
+    const className = 'container'
+    const props = {children, className} //i didn't know you could do this lol
 
-    //you can interpolate statements (e.g. if, try, for etc), although this doesn't include ternary operators, I don't think this is a statement
-    const element = <div className={className}>{children}</div>
+    const element = <div {...props}/> //if you add on another attribute, it gets compiled to the script as _extend
 
     ReactDOM.createRoot(document.getElementById('root')).render(element)
   </script>
