--- a/src/exercise/04.html
+++ b/src/exercise/04.html
@@ -18,15 +18,16 @@
     }
 
     Message.propTypes = {
-      greeting: PropTypes.string.isRequired, //is required needs to be specified bc it is ot included by default
+      greeting: PropTypes.string.isRequired,
       subject: PropTypes.string.isRequired,
     }
-
+  // fragments allow elements to be rendered side by side. It is kind of like an invisible tag
+    //swapping <div className="container"> for <> makes the messages load directly in the root rather than in a div in the root
     const element = (
-      <div className="container">
+      <>
         <Message greeting="Hello" subject="World" />
         <Message greeting="Goodbye" subject="World" />
-      </div>
+      </>
     )
 
     ReactDOM.createRoot(document.getElementById('root')).render(element)
